Fix header color and trailer link contrast

--- a/style.css
+++ b/style.css
@@ -98,6 +98,15 @@ footer .trailer a {
   text-decoration: underline;
 }
 
+footer a {
+  color: inherit;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 @media (max-width: 600px) {
   .profile {
     float: none;
